# monsoonfire-portal

./: .firebaserc  .gitignore  .gitleaks.toml  AGENTS.md  COST_NOTES.md  DEPLOY.md  MF Marketing.lnk  PROJECT_SNAPSHOT.md  REVIEW_ACTION_PLAN.md  SECURITY.md  WORKLOG.md  _app.diff  deploy.ps1  dev.cmd  firebase.emulators.local.json  firebase.json  firestore.indexes.json  firestore.rules  firestoreQueries.ps  index.html  index.php  package-lock.json  package.json  serve-ab.ps1  serve.ps1  sitemap.xml  storage.rules  tmp-firebase-tracker.json  web.config
.codex/: INSTRUCTIONS.md  SESSION_TEMPLATE.md  agents.md  config.toml  fixture-steward-state.json  improvement-log.md  improvement-state.json  index-guard-log.md  interaction-log.md  pr-green-log.md  user.md
.github/: dependabot.yml
.governance/: README.md
.tmp/: epic8-well-known-evidence.json
about/: index.html
android/: AGENTS.md  README.md  build.gradle.kts  settings.gradle.kts
artifacts/: agent-staff-bootstrap-2026-02-25.json  cutover-verify-latest.json  cutover-verify-protected-required.json  deploy-evidence-latest.json  deploy-evidence-latest.md  external-cutover-checklist-latest.md  intent-plan.generated.json  notification-drill-run-agent-staff.json  portal-auth-loop-fix-2026-02-25.json  pr-gate.json  website-ga-sprint1-foundations.json  website-kiln-board-check.json
classes/: index.html
studio-brain/agent_runtime/: pyproject.toml
studio-brain/agent_runtime/src/monsoonfire_agent_runtime/: __init__.py  cli.py  contracts.py  runtime.py
studio-brain/agent_runtime/tests/: test_runtime.py
web/: .npmrc  (+13 more)
(+3043 files in other folders)
