[project]
name = "monsoonfire-agent-runtime"
version = "0.1.0"
description = "Python-first background agent runtime for Monsoon Fire / Studio Brain."
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
